--- a/index.html
+++ b/index.html
@@ -5,15 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
-    <script src="tictactoe.js"></script>
+    <script src="tictactoe.js" defer></script>
+    <title>tic-tac-toe</title>
 </head>
 <body>
     <h1>Tic-Tac-Toe</h1>
     <div class="player" id="player1">Player 1</div>
     <div class="player" id="player2">Player 2</div>
 
-    <div id="gameBoard">
-
+    <div id="gameBoardDiv">
+        <div class="boardTile" id="board-0"></div>
+        <div class="boardTile" id="board-1"></div>
+        <div class="boardTile" id="board-2"></div>
+        <div class="boardTile" id="board-3"></div>
+        <div class="boardTile" id="board-4"></div>
+        <div class="boardTile" id="board-5"></div>
+        <div class="boardTile" id="board-6"></div>
+        <div class="boardTile" id="board-7"></div>
+        <div class="boardTile" id="board-8"></div>
     </div>
 </body>
 </html>
