Implement a reset button

--- a/index.html
+++ b/index.html
@@ -9,20 +9,27 @@
     <title>tic-tac-toe</title>
 </head>
 <body>
-    <h1>Tic-Tac-Toe</h1>
-    <div class="player" id="player1">Player 1</div>
-    <div class="player" id="player2">Player 2</div>
+    
+        <h1>Tic-Tac-Toe</h1>
+        <div class="container">
 
-    <div id="gameBoardDiv">
-        <div class="boardTile" id="board-0"></div>
-        <div class="boardTile" id="board-1"></div>
-        <div class="boardTile" id="board-2"></div>
-        <div class="boardTile" id="board-3"></div>
-        <div class="boardTile" id="board-4"></div>
-        <div class="boardTile" id="board-5"></div>
-        <div class="boardTile" id="board-6"></div>
-        <div class="boardTile" id="board-7"></div>
-        <div class="boardTile" id="board-8"></div>
-    </div>
+            <div class="player" id="player1">Player 1</div>
+            
+            <div id="gameBoardDiv">
+                <div class="boardTile" id="board-0"></div>
+                <div class="boardTile" id="board-1"></div>
+                <div class="boardTile" id="board-2"></div>
+                <div class="boardTile" id="board-3"></div>
+                <div class="boardTile" id="board-4"></div>
+                <div class="boardTile" id="board-5"></div>
+                <div class="boardTile" id="board-6"></div>
+                <div class="boardTile" id="board-7"></div>
+                <div class="boardTile" id="board-8"></div>
+            </div>
+
+            <div class="player" id="player2">Player 2</div>
+        </div>
+
+        <button type="button" id="reset-button">Reset</button>
 </body>
 </html>
