--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
 
         </div>
-        <div class="button-container"><button type="button" id="reset-button">Reset</button></div>
+        <button type="button" id="reset-button">Reset</button>
 
 </body>
 </html>
